<resources>
    <string name="app_name">TvMaze</string>

    <!-- Main Activity -->
    <string name="main_activity_search_hint">Type your show</string>

    <!-- Detail Show Fragment -->
    <string name="fragment_detail_show_episodes">Episodes:</string>
    <string name="fragment_detail_show_number_season">Season: %s</string>
    <string name="fragment_detail_show_info">Show Info >>></string>

    <!-- Episode Fragment -->
    <string name="fragment_episode_number">Number:</string>
    <string name="fragment_episode_season">Season:</string>
    <string name="fragment_episode_duration">Duration:</string>
    <string name="fragment_episode_minutes">%s minutes</string>

    <!-- Favorite Fragment -->
    <string name="fragment_favorite_title">Favorite Shows</string>
    <string name="fragment_favorite_list_empty">No favorite shows added yet</string>

    <!-- People Fragment -->
    <string name="fragment_people_title">People</string>
    <string name="fragment_people_empty_list">No people found</string>
    <string name="fragment_people_hint_search">Type a people to search</string>

    <!-- People Detail Fragment -->
    <string name="fragment_people_detail_show_title">Shows</string>
    <string name="fragment_people_detail_shows_empty">No shows to show</string>

    <!-- Dialog Show Info -->
    <string name="dialog_show_info_hours">Hour:</string>
    <string name="dialog_show_info_days">Days:</string>
    <string name="dialog_show_info_gender">Genres:</string>
    <string name="dialog_show_info_site">Official website:</string>
    <string name="empty_seasons_error">Something wrong happened trying to load seasons</string>

    <!-- Dialog Loading -->
    <string name="dialog_loading_title">Loading...</string>

    <!-- Menu Actions -->
    <string name="menu_search">Search</string>
    <string name="menu_favorite">Favorite</string>
    <string name="menu_people">People</string>

    <!-- Generic Actions -->
    <string name="accept_button">Accept</string>

    <!-- Generic Errors -->
    <string name="error_service">The service is down now, try later</string>
    <string name="error_service_shows">The show list is empty now</string>
    <string name="list_empty_error">Something wrong happened</string>
    <string name="list_empty">No results for your query</string>
</resources>
