<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:title="@string/menu_search"
        android:icon="@drawable/ic_search_black_24dp"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_favorite_list"
        android:title="@string/menu_favorite"
        android:icon="@drawable/ic_favorite_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_people"
        android:title="@string/menu_people"
        android:icon="@drawable/ic_people_white_24dp"
        app:showAsAction="always"/>
</menu>
