<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/fragmentEpisodeImageViewImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintHeight_percent="0.35"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentEpisodeTextViewName"
        style="@style/TitleTextViewBold"
        android:layout_width="0dp"
        android:background="@color/colorPrimary"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/fragmentEpisodeImageViewImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentEpisodeTextViewSummary"
        style="@style/SummaryTextView"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        app:layout_constraintHeight_percent="0.3"
        app:layout_constraintTop_toBottomOf="@+id/fragmentEpisodeTextViewName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentEpisodeTextViewNumber"
        style="@style/TitleTextViewBold"
        android:text="@string/fragment_episode_number"
        android:gravity="start|center_vertical"
        android:layout_marginTop="@dimen/default_size"
        app:layout_constraintTop_toBottomOf="@+id/fragmentEpisodeTextViewSummary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/fragmentEpisodeTextViewSeason"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentEpisodeTextViewNumberDescription"
        style="@style/DescriptionTextView"
        android:layout_width="0dp"
        android:gravity="start|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragmentEpisodeTextViewNumber"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentEpisodeTextViewNumber"
        app:layout_constraintStart_toEndOf="@+id/fragmentEpisodeTextViewNumber"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentEpisodeTextViewSeason"
        style="@style/TitleTextViewBold"
        android:text="@string/fragment_episode_season"
        android:gravity="start|center_vertical"
        android:layout_marginTop="@dimen/default_size"
        app:layout_constraintTop_toBottomOf="@+id/fragmentEpisodeTextViewNumber"
        app:layout_constraintBottom_toTopOf="@+id/fragmentEpisodeTextViewDuration"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentEpisodeTextViewSeasonDescription"
        style="@style/DescriptionTextView"
        android:layout_width="0dp"
        android:gravity="start|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragmentEpisodeTextViewSeason"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentEpisodeTextViewSeason"
        app:layout_constraintStart_toEndOf="@+id/fragmentEpisodeTextViewSeason"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentEpisodeTextViewDuration"
        style="@style/TitleTextViewBold"
        android:text="@string/fragment_episode_duration"
        android:gravity="start|center_vertical"
        android:layout_marginTop="@dimen/default_size"
        app:layout_constraintTop_toBottomOf="@+id/fragmentEpisodeTextViewSeason"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/fragmentEpisodeTextViewDurationDescription"
        style="@style/DescriptionTextView"
        android:layout_width="0dp"
        android:gravity="start|center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/fragmentEpisodeTextViewDuration"
        app:layout_constraintBottom_toBottomOf="@+id/fragmentEpisodeTextViewDuration"
        app:layout_constraintStart_toEndOf="@+id/fragmentEpisodeTextViewDuration"/>

</androidx.constraintlayout.widget.ConstraintLayout>